[tool.poetry]
name = "arnold"
version = "0.1.0"
description = "RPi 4 Based Robotic Platform"
authors = ["Jonathan Bydendyk <jonathan@hacklab.co.za>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [
    { include = "arnold/cli" },
]

[tool.poetry.dependencies]
python = "^3.10"
bottle = "^0.13.1"
click = "^8.1.7"
google-cloud-speech = "^2.27.0"
gpiozero = "^2.0.1"
nltk = "^3.9.1"
oauth2client = "^4.1.3"
PyAudio = "^0.2.14"
pyserial = "^3.5"
python-dotenv = "^1.0.1"
pyttsx3 = "^2.91"
smbus2 = "^0.4.3"
SpeechRecognition = "^3.10.4"
uvicorn = "^0.30.6"
opencv-python-headless = "^4.10.0.84"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
requests-mock = "^1.12.1"
py3-tts = "^3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
arnold = "arnold.cli:cli"
